docs/api/qiskit/0.43/qiskit.opflow.primitive_ops.PrimitiveOp.mdx
---
title: PrimitiveOp
description: API reference for qiskit.opflow.primitive_ops.PrimitiveOp
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.primitive_ops.PrimitiveOp
---

# PrimitiveOp

<Class id="qiskit.opflow.primitive_ops.PrimitiveOp" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/opflow/primitive_ops/primitive_op.py" signature="PrimitiveOp(primitive, coeff=1.0)">
  Bases: [`OperatorBase`](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")

  Deprecated: A class for representing basic Operators, backed by Operator primitives from Terra. This class (and inheritors) primarily serves to allow the underlying primitives to “flow” - i.e. interoperability and adherence to the Operator formalism - while the core computational logic mostly remains in the underlying primitives. For example, we would not produce an interface in Terra in which `QuantumCircuit1 + QuantumCircuit2` equaled the Operator sum of the circuit unitaries, rather than simply appending the circuits. However, within the Operator flow summing the unitaries is the expected behavior.

  Note that all mathematical methods are not in-place, meaning that they return a new object, but the underlying primitives are not copied.

  <Admonition title="Deprecated since version 0.24.0" type="danger">
    The class `qiskit.opflow.primitive_ops.primitive_op.PrimitiveOp` is deprecated as of qiskit-terra 0.24.0. It will be removed no earlier than 3 months after the release date. For code migration guidelines, visit [https://qisk.it/opflow\_migration](https://qisk.it/opflow_migration).
  </Admonition>

  **Parameters**

  *   **primitive** ([*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")  *|*[*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")  *| List |*[*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")  *| spmatrix |*[*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.operators.operator.Operator")  *|*[*Pauli*](qiskit.quantum_info.Pauli "qiskit.quantum_info.operators.symplectic.pauli.Pauli")  *|*[*SparsePauliOp*](qiskit.quantum_info.SparsePauliOp "qiskit.quantum_info.operators.symplectic.sparse_pauli_op.SparsePauliOp")) – The operator primitive being wrapped.
  *   **coeff** (*complex |* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – A coefficient multiplying the primitive.

  **Return type**

  [PrimitiveOp](#qiskit.opflow.primitive_ops.PrimitiveOp "qiskit.opflow.primitive_ops.PrimitiveOp")

  ## Methods Defined Here

  <span id="qiskit-opflow-primitive-ops-primitiveop-add" />

  ### add

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.add" name="add" signature="PrimitiveOp.add(other)">
    Return Operator addition of self and other, overloaded by `+`.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – An `OperatorBase` with the same number of qubits as self, and in the same ‘Operator’, ‘State function’, or ‘Measurement’ category as self (i.e. the same type of underlying function).

    **Returns**

    An `OperatorBase` equivalent to the sum of self and other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-adjoint" />

  ### adjoint

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.adjoint" name="adjoint" signature="PrimitiveOp.adjoint()">
    Return a new Operator equal to the Operator’s adjoint (conjugate transpose), overloaded by `~`. For StateFns, this also turns the StateFn into a measurement.

    **Returns**

    An `OperatorBase` equivalent to the adjoint of self.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-assign-parameters" />

  ### assign\_parameters

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.assign_parameters" name="assign_parameters" signature="PrimitiveOp.assign_parameters(param_dict)">
    Binds scalar values to any Terra `Parameters` in the coefficients or primitives of the Operator, or substitutes one `Parameter` for another. This method differs from Terra’s `assign_parameters` in that it also supports lists of values to assign for a give `Parameter`, in which case self will be copied for each parameterization in the binding list(s), and all the copies will be returned in an `OpList`. If lists of parameterizations are used, every `Parameter` in the param\_dict must have the same length list of parameterizations.

    **Parameters**

    **param\_dict** (*dict*) – The dictionary of `Parameters` to replace, and values or lists of values by which to replace them.

    **Returns**

    The `OperatorBase` with the `Parameters` in self replaced by the values or `Parameters` in param\_dict. If param\_dict contains parameterization lists, this `OperatorBase` is an `OpList`.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-compose" />

  ### compose

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.compose" name="compose" signature="PrimitiveOp.compose(other, permutation=None, front=False)">
    Return Operator Composition between self and other (linear algebra-style: A\@B(x) = A(B(x))), overloaded by `@`.

    Note: You must be conscious of Quantum Circuit vs. Linear Algebra ordering conventions. Meaning, X.compose(Y) produces an X∘Y on qubit 0, but would produce a QuantumCircuit which looks like

    > -\[Y]-\[X]-

    Because Terra prints circuits with the initial state at the left side of the circuit.

    **Parameters**

    *   **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The `OperatorBase` with which to compose self.
    *   **permutation** (*List\[int] | None*) – `List[int]` which defines permutation on other operator.
    *   **front** (*bool*) – If front==True, return `other.compose(self)`.

    **Returns**

    An `OperatorBase` equivalent to the function composition of self and other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-equals" />

  ### equals

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.equals" name="equals" signature="PrimitiveOp.equals(other)">
    Evaluate Equality between Operators, overloaded by `==`. Only returns True if self and other are of the same representation (e.g. a DictStateFn and CircuitStateFn will never be equal, even if their vector representations are equal), their underlying primitives are equal (this means for ListOps, OperatorStateFns, or EvolvedOps the equality is evaluated recursively downwards), and their coefficients are equal.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The `OperatorBase` to compare to self.

    **Returns**

    A bool equal to the equality of self and other.

    **Return type**

    bool
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-eval" />

  ### eval

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.eval" name="eval" signature="PrimitiveOp.eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    If `front` is None, the matrix-representation of the operator is returned.

    **Parameters**

    **front** (*str | Dict\[str, complex] |* [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")  *|*[*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")  *|*[*Statevector*](qiskit.quantum_info.Statevector "qiskit.quantum_info.states.statevector.Statevector") *| None*) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function, or None.

    **Returns**

    The output of the Operator’s evaluation function. If self is a `StateFn`, the result is a float or complex. If self is an Operator (`PrimitiveOp, ComposedOp, SummedOp, EvolvedOp,` etc.), the result is a StateFn. If `front` is None, the matrix-representation of the operator is returned, which is a `MatrixOp` for the operators and a `VectorStateFn` for state-functions. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase") | complex
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-exp-i" />

  ### exp\_i

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.exp_i" name="exp_i" signature="PrimitiveOp.exp_i()">
    Return Operator exponentiation, equaling e^(-i \* op)

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-log-i" />

  ### log\_i

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.log_i" name="log_i" signature="PrimitiveOp.log_i(massive=False)">
    Return a `MatrixOp` equivalent to log(H)/-i for this operator H. This function is the effective inverse of exp\_i, equivalent to finding the Hermitian Operator which produces self when exponentiated.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-mul" />

  ### mul

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.mul" name="mul" signature="PrimitiveOp.mul(scalar)">
    Returns the scalar multiplication of the Operator, overloaded by `*`, including support for Terra’s `Parameters`, which can be bound to values later (via `bind_parameters`).

    **Parameters**

    **scalar** (*complex |* [*ParameterExpression*](qiskit.circuit.ParameterExpression "qiskit.circuit.parameterexpression.ParameterExpression")) – The real or complex scalar by which to multiply the Operator, or the `ParameterExpression` to serve as a placeholder for a scalar factor.

    **Returns**

    An `OperatorBase` equivalent to product of self and scalar.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-permute" />

  ### permute

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.permute" name="permute" signature="PrimitiveOp.permute(permutation)">
    Permutes the qubits of the operator.

    **Parameters**

    **permutation** (*List\[int]*) – A list defining where each qubit should be permuted. The qubit at index j should be permuted to position permutation\[j].

    **Returns**

    A new OperatorBase containing the permuted operator.

    **Raises**

    [**OpflowError**](qiskit.opflow.OpflowError "qiskit.opflow.OpflowError") – if indices do not define a new index for each qubit.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-primitive-strings" />

  ### primitive\_strings

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.primitive_strings" name="primitive_strings" signature="PrimitiveOp.primitive_strings()">
    Return a set of strings describing the primitives contained in the Operator. For example, `{'QuantumCircuit', 'Pauli'}`. For hierarchical Operators, such as `ListOps`, this can help illuminate the primitives represented in the various recursive levels, and therefore which conversions can be applied.

    **Returns**

    A set of strings describing the primitives contained within the Operator.

    **Return type**

    *Set*\[str]
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-reduce" />

  ### reduce

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.reduce" name="reduce" signature="PrimitiveOp.reduce()">
    Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

    **Returns**

    The reduced `OperatorBase`.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-tensor" />

  ### tensor

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.tensor" name="tensor" signature="PrimitiveOp.tensor(other)">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, X.tensor(Y) produces an X on qubit 0 and an Y on qubit 1, or X⨂Y, but would produce a QuantumCircuit which looks like

    > -\[Y]- -\[X]-

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** ([*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")) – The `OperatorBase` to tensor product with self.

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-tensorpower" />

  ### tensorpower

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.tensorpower" name="tensorpower" signature="PrimitiveOp.tensorpower(other)">
    Return tensor product with self multiple times, overloaded by `^`.

    **Parameters**

    **other** (*int*) – The int number of times to tensor product self with itself via `tensorpower`.

    **Returns**

    An `OperatorBase` equivalent to the tensorpower of self by other.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase") | int
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-to-circuit" />

  ### to\_circuit

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.to_circuit" name="to_circuit" signature="PrimitiveOp.to_circuit()">
    Returns a `QuantumCircuit` equivalent to this Operator.

    **Return type**

    [*QuantumCircuit*](qiskit.circuit.QuantumCircuit "qiskit.circuit.quantumcircuit.QuantumCircuit")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-to-circuit-op" />

  ### to\_circuit\_op

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.to_circuit_op" name="to_circuit_op" signature="PrimitiveOp.to_circuit_op()">
    Returns a `CircuitOp` equivalent to this Operator.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-to-instruction" />

  ### to\_instruction

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.to_instruction" name="to_instruction" signature="PrimitiveOp.to_instruction()">
    Returns an `Instruction` equivalent to this Operator.

    **Return type**

    [*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.to_matrix" name="to_matrix" signature="PrimitiveOp.to_matrix(massive=False)">
    Return NumPy representation of the Operator. Represents the evaluation of the Operator’s underlying function on every combination of basis binary strings. Warn if more than 16 qubits to force having to set `massive=True` if such a large vector is desired.

    **Returns**

    The NumPy `ndarray` equivalent to this Operator.

    **Return type**

    [*ndarray*](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.html#numpy.ndarray "(in NumPy v1.25)")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-to-matrix-op" />

  ### to\_matrix\_op

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.to_matrix_op" name="to_matrix_op" signature="PrimitiveOp.to_matrix_op(massive=False)">
    Returns a `MatrixOp` equivalent to this Operator.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  <span id="qiskit-opflow-primitive-ops-primitiveop-to-pauli-op" />

  ### to\_pauli\_op

  <Function id="qiskit.opflow.primitive_ops.PrimitiveOp.to_pauli_op" name="to_pauli_op" signature="PrimitiveOp.to_pauli_op(massive=False)">
    Returns a sum of `PauliOp` s equivalent to this Operator.

    **Return type**

    [*OperatorBase*](qiskit.opflow.OperatorBase "qiskit.opflow.operator_base.OperatorBase")
  </Function>

  ## Attributes

  ### INDENTATION

  <Attribute id="qiskit.opflow.primitive_ops.PrimitiveOp.INDENTATION" name="INDENTATION" attributeValue="= '  '" />

  ### coeff

  <Attribute id="qiskit.opflow.primitive_ops.PrimitiveOp.coeff" name="coeff">
    The scalar coefficient multiplying the Operator.

    **Returns**

    The coefficient.
  </Attribute>

  ### instance\_id

  <Attribute id="qiskit.opflow.primitive_ops.PrimitiveOp.instance_id" name="instance_id">
    Return the unique instance id.
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.opflow.primitive_ops.PrimitiveOp.num_qubits" name="num_qubits" />

  ### parameters

  <Attribute id="qiskit.opflow.primitive_ops.PrimitiveOp.parameters" name="parameters" />

  ### primitive

  <Attribute id="qiskit.opflow.primitive_ops.PrimitiveOp.primitive" name="primitive">
    The primitive defining the underlying function of the Operator.

    **Returns**

    The primitive object.
  </Attribute>

  ### settings

  <Attribute id="qiskit.opflow.primitive_ops.PrimitiveOp.settings" name="settings">
    Return operator settings.
  </Attribute>
</Class>

